packages/yew-router-macro/tests/routable_derive/unnamed-fields-fail.stderr
error: only named fields are supported
 --> $DIR/unnamed-fields-fail.rs:3:5
  |
3 |     #[at("/one/:two")]
  |     ^
